<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Entrust</string>
    <string name="hello_world">Your Bookmarks here</string>
    <string name="action_settings">Settings</string>
    <string name="login_email">Eg: joe@gmail.com</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="button_signin">Sign In</string>
    <string name="label_newuser">New User?</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_fbsignin">Login with Facebok</string>
    <string name="label_fname">Name</string>
    <string name="txt_fname">Eg: John Burton </string>
    <string name="title_activity_show_bookmarks">My Bookmarks</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_bookmarks">Bookmark</string>
    <string name="title_activity_edit_bookmark">EditBookmarkActivity</string>
    <string name="bookmarkdetails">Curry Pundits</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="title_activity_view_bookmarks_fragment">ViewBookmarksFragment</string>

    <string name="c1">ArtsEntertainment</string>
    <string name="c2"></string>
    <string name="c3"></string>
    <string name="c4"></string>
    <string name="c5"></string>
    <string name="c6"></string>
    <string name="c7"></string>
    <string name="c8"></string>
    <string name="c9"></string>
    <string name="c10"></string>
    <string-array name="nav_drawer_items">
        <item>Profile</item>
        <item>Settings</item>
        <item>Trust network</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_action_person</item>
        <item>@drawable/ic_action_person</item>
        <item>@drawable/ic_people</item>
    </array>

    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_trust_network">TrustNetworkActivity</string>
    <string name="title_activity_search_nearby_fragment">SearchNearbyFragment</string>
    <string name="title_activity_menus">MenusActivity</string>
    <string name="title_activity_recommendations">RecommendationsActivity</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="title_activity_friend">FriendActivity</string>
    <string name="title_activity_search_by_location">SearchByLocationActivity</string>
    <string name="title_activity_search_by_name">SearchByNameActivity</string>
    <string name="title_activity_venue">VenueActivity</string>
    <string name="title_activity_whats_hot">WhatsHotActivity</string>
    <string name="title_activity_reco">RecoActivity</string>

</resources>
